--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     const tbody = document.querySelector('tbody');
     const pagination = document.getElementById('pagination');
 
-    // Mappa per tooltip basata sul campo @sia (valori tipo "desio@", "carate@"...)
+    // Mappa per tooltip basata sul campo SIA (valori tipo "desio@", "carate@"...)
     const tooltipEmails = {
       'DESIO': 'sia.desio@asst-brianza.it',
       'CARATE': 'sia.carate@asst-brianza.it',
