--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
       'CARATE': 'sia.carate@asst-brianza.it',
       'VIMERCATE': 'sia.vimercate@asst-brianza.it',
       'DESIO': 'sia.desio@asst-brianza.it',
-      'IRCCS MONZA': 'sia.monza@asst-brianza.it',
+      // IRCCS MONZA': 'sia.monza@asst-brianza.it'
+	  'IRCCS MONZA': 'riferire a Fleet Monza',
     };
 
     async function loadCSV() {
