--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <th onclick="sortTable(0)">Città</th>
         <th onclick="sortTable(1)">Indirizzo</th>
         <th onclick="sortTable(2)">Servizio ASST</th>
-        <th onclick="sortTable(3)">email</th>
+        <th onclick="sortTable(3)">Email</th>
         <th onclick="sortTable(4)">Presidio Fleet</th>
         <th onclick="sortTable(5)">Note</th>
       </tr>
@@ -139,7 +139,7 @@
     const tbody = document.querySelector('tbody');
     const pagination = document.getElementById('pagination');
 
-    // Tooltip email per presidio
+    // Tooltip email per presidio (chiave maiuscola)
     const tooltipEmails = {
       'CARATE': 'sia.carate@asst-brianza.it',
       'VIMERCATE': 'sia.vimercate@asst-brianza.it',
@@ -184,6 +184,7 @@
       const serviceFilter = document.getElementById('serviceFilter');
       const presidioFilter = document.getElementById('presidioFilter');
 
+      // Pulisce opzioni esistenti tranne la prima (default)
       cityFilter.options.length = 1;
       serviceFilter.options.length = 1;
       presidioFilter.options.length = 1;
@@ -258,31 +259,33 @@
 
       tbody.innerHTML = '';
       for (const row of pageRows) {
-        const tooltipEmail = tooltipEmails[row.presidio.toUpperCase()] || '';
+        const presidioUpper = row.presidio.toUpperCase();
+        const tooltipEmail = tooltipEmails[presidioUpper] || '';
 
-        // Gestione email e tooltip
-        const emailValue = row.email.trim();
-        let emailCellContent = '';
-        if(emailValue.includes('@')) {
-          emailCellContent = emailValue;
-        } else if (tooltipEmails[emailValue.toUpperCase()]) {
-          emailCellContent = `
-            <div class="tooltip">${emailValue}
-              <span class="tooltiptext">${tooltipEmails[emailValue.toUpperCase()]}</span>
-            </div>
-          `;
-        } else if(emailValue === '' && tooltipEmail) {
-          emailCellContent = `
-            <div class="tooltip">${emailValue}
+        const emailRaw = row.email.trim();
+        let emailCell = '';
+
+        if(emailRaw.includes('@')) {
+          // email valida, la mostro semplice senza tooltip
+          emailCell = `${emailRaw}`;
+        } else if(emailRaw === '' && tooltipEmail) {
+          // campo email vuoto ma presidio noto
+          emailCell = `
+            <div class="tooltip">${row.presidio}
               <span class="tooltiptext">${tooltipEmail}</span>
-            </div>
-          `;
+            </div>`;
+        } else if(tooltipEmails[emailRaw.toUpperCase()]) {
+          // campo email contiene presidio, mostro con tooltip
+          emailCell = `
+            <div class="tooltip">${emailRaw}
+              <span class="tooltiptext">${tooltipEmails[emailRaw.toUpperCase()]}</span>
+            </div>`;
         } else {
-          emailCellContent = emailValue;
+          // altrimenti mostro testo semplice
+          emailCell = emailRaw;
         }
 
-        const tr = document.createElement('tr');
-
+        tr = document.createElement('tr');
         tr.innerHTML = `
           <td>${row.citta}</td>
           <td>${row.indirizzo}</td>
@@ -291,7 +294,7 @@
               <span class="tooltiptext">${row.servizio || ''}</span>
             </div>
           </td>
-          <td>${emailCellContent}</td>
+          <td>${emailCell}</td>
           <td>${row.presidio}</td>
           <td>
             <div class="tooltip">${row.note || ''}
@@ -353,7 +356,7 @@
       doc.setFontSize(12);
       doc.text("Esportazione Sedi Filtrate", 10, 10);
 
-      // Usa autoTable per la tabella
+      // Usa autoTable per la tabella (controlla se plugin caricato correttamente)
       doc.autoTable({
         startY: 20,
         head: [headers],
@@ -368,13 +371,16 @@
       document.body.classList.toggle('dark-mode');
     }
 
+    // Event listeners filtri
     document.getElementById('cityFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
     document.getElementById('serviceFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
     document.getElementById('presidioFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
 
+    // Carica CSV al caricamento pagina
     loadCSV();
 
   </script>
+  <!-- Tabella in PDF richiede autoTable -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 </body>
 </html>
