--- a/index.html
+++ b/index.html
@@ -11,41 +11,36 @@
       color: #333;
       padding: 20px;
     }
-	select {
+    select {
       font-size: 14px;
       padding: 6px 10px;
       border-radius: 6px;
       border: 1px solid #ccc;
-	}
+    }
     .dark-mode {
       background: #121212;
       color: #eee;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
     }
-
     th, td {
-	  font-size: 14px;
+      font-size: 14px;
       padding: 6px 10px;
       border: 1px solid #ccc;
       text-align: left;
     }
-
     th {
       cursor: pointer;
       background-color: #f2f2f2;
     }
-
     .tooltip {
       position: relative;
       display: inline-block;
       cursor: help;
     }
-
     .tooltip .tooltiptext {
       visibility: hidden;
       width: max-content;
@@ -64,28 +59,23 @@
       opacity: 0;
       transition: opacity 0.3s;
     }
-
     .tooltip:hover .tooltiptext {
       visibility: visible;
       opacity: 1;
     }
-
     .controls {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 10px;
     }
-
     button, select {
-	  font-size: 12px;
+      font-size: 12px;
       padding: 8px;
     }
-
     .pagination {
       margin-top: 10px;
     }
-
     .pagination button {
       margin-right: 5px;
       padding: 5px 10px;
@@ -139,7 +129,6 @@
     const tbody = document.querySelector('tbody');
     const pagination = document.getElementById('pagination');
 
-    // Tooltip email per presidio (chiave maiuscola)
     const tooltipEmails = {
       'CARATE': 'sia.carate@asst-brianza.it',
       'VIMERCATE': 'sia.vimercate@asst-brianza.it',
@@ -147,7 +136,6 @@
       'IRCCS MONZA': 'sia.monza@asst-brianza.it',
     };
 
-    // Funzione per caricare e parsare CSV
     async function loadCSV() {
       try {
         const response = await fetch('dati.csv');
@@ -162,10 +150,8 @@
       }
     }
 
-    // Parse CSV semplice (assume header e ; come separatore)
     function parseCSV(text) {
       const lines = text.trim().split('\n');
-      const headers = lines[0].split(';').map(h => h.trim());
       rows = lines.slice(1).map(line => {
         const values = line.split(';').map(v => v.trim());
         return {
@@ -184,7 +170,6 @@
       const serviceFilter = document.getElementById('serviceFilter');
       const presidioFilter = document.getElementById('presidioFilter');
 
-      // Pulisce opzioni esistenti tranne la prima (default)
       cityFilter.options.length = 1;
       serviceFilter.options.length = 1;
       presidioFilter.options.length = 1;
@@ -259,128 +244,5 @@
 
       tbody.innerHTML = '';
       for (const row of pageRows) {
-        const presidioUpper = row.presidio.toUpperCase();
-        const tooltipEmail = tooltipEmails[presidioUpper] || '';
-
-        const emailRaw = row.email.trim();
-        let emailCell = '';
-
-        if(emailRaw.includes('@')) {
-          // email valida, la mostro semplice senza tooltip
-          emailCell = `${emailRaw}`;
-        } else if(emailRaw === '' && tooltipEmail) {
-          // campo email vuoto ma presidio noto
-          emailCell = `
-            <div class="tooltip">${row.presidio}
-              <span class="tooltiptext">${tooltipEmail}</span>
-            </div>`;
-        } else if(tooltipEmails[emailRaw.toUpperCase()]) {
-          // campo email contiene presidio, mostro con tooltip
-          emailCell = `
-            <div class="tooltip">${emailRaw}
-              <span class="tooltiptext">${tooltipEmails[emailRaw.toUpperCase()]}</span>
-            </div>`;
-        } else {
-          // altrimenti mostro testo semplice
-          emailCell = emailRaw;
-        }
-
-        tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${row.citta}</td>
-          <td>${row.indirizzo}</td>
-          <td>
-            <div class="tooltip">${row.servizio || ''}
-              <span class="tooltiptext">${row.servizio || ''}</span>
-            </div>
-          </td>
-          <td>${emailCell}</td>
-          <td>${row.presidio}</td>
-          <td>
-            <div class="tooltip">${row.note || ''}
-              <span class="tooltiptext">${row.note || ''}</span>
-            </div>
-          </td>
-        `;
-        tbody.appendChild(tr);
-      }
-
-      renderPagination(totalPages);
-    }
-
-    function renderPagination(totalPages) {
-      pagination.innerHTML = '';
-
-      if(totalPages <= 1) return;
-
-      for(let i=1; i <= totalPages; i++) {
-        const btn = document.createElement('button');
-        btn.textContent = i;
-        if(i === currentPage) btn.disabled = true;
-        btn.addEventListener('click', () => {
-          currentPage = i;
-          renderTable();
-        });
-        pagination.appendChild(btn);
-      }
-    }
-
-    function resetFilters() {
-      document.getElementById('cityFilter').value = '';
-      document.getElementById('serviceFilter').value = '';
-      document.getElementById('presidioFilter').value = '';
-      currentPage = 1;
-      currentSortIndex = null;
-      sortAsc = true;
-      renderTable();
-    }
-
-    function sortTable(index) {
-      if(currentSortIndex === index) {
-        sortAsc = !sortAsc;
-      } else {
-        currentSortIndex = index;
-        sortAsc = true;
-      }
-      renderTable();
-    }
-
-    function exportPDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-
-      const filtered = filterRows();
-      const headers = ["Città", "Indirizzo", "Servizio ASST", "Email", "Presidio Fleet", "Note"];
-      const data = filtered.map(row => [row.citta, row.indirizzo, row.servizio, row.email, row.presidio, row.note]);
-
-      doc.setFontSize(12);
-      doc.text("Esportazione Sedi Filtrate", 10, 10);
-
-      // Usa autoTable per la tabella (controlla se plugin caricato correttamente)
-      doc.autoTable({
-        startY: 20,
-        head: [headers],
-        body: data,
-        styles: { fontSize: 8 }
-      });
-
-      doc.save("Sedi_Filtrate.pdf");
-    }
-
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
-    }
-
-    // Event listeners filtri
-    document.getElementById('cityFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
-    document.getElementById('serviceFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
-    document.getElementById('presidioFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
-
-    // Carica CSV al caricamento pagina
-    loadCSV();
-
-  </script>
-  <!-- Tabella in PDF richiede autoTable -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-</body>
-</html>
+        // Tooltip email da presidio (chiave maiuscola)
+        const tooltipTextEmail = tooltipEmails[row.presidio.toUpperCase()] || ''
