--- a/index.html
+++ b/index.html
@@ -11,41 +11,46 @@
       color: #333;
       padding: 20px;
     }
-    select {
+	select {
       font-size: 14px;
       padding: 6px 10px;
       border-radius: 6px;
       border: 1px solid #ccc;
-    }
+	}
     .dark-mode {
       background: #121212;
       color: #eee;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
     }
+
     th, td {
-      font-size: 14px;
+	  font-size: 14px;
       padding: 6px 10px;
       border: 1px solid #ccc;
       text-align: left;
     }
+
     th {
       cursor: pointer;
       background-color: #f2f2f2;
     }
+
     .tooltip {
       position: relative;
       display: inline-block;
       cursor: help;
     }
+
     .tooltip .tooltiptext {
       visibility: hidden;
       width: max-content;
       max-width: 300px;
-      background-color: #fff8c4; /* giallo chiaro */
+      background-color: #fff8c4;
       color: #333;
       text-align: left;
       padding: 5px;
@@ -59,23 +64,28 @@
       opacity: 0;
       transition: opacity 0.3s;
     }
+
     .tooltip:hover .tooltiptext {
       visibility: visible;
       opacity: 1;
     }
+
     .controls {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 10px;
     }
+
     button, select {
-      font-size: 12px;
+	  font-size: 12px;
       padding: 8px;
     }
+
     .pagination {
       margin-top: 10px;
     }
+
     .pagination button {
       margin-right: 5px;
       padding: 5px 10px;
@@ -129,6 +139,7 @@
     const tbody = document.querySelector('tbody');
     const pagination = document.getElementById('pagination');
 
+    // Tooltip email per presidio (chiavi maiuscole)
     const tooltipEmails = {
       'CARATE': 'sia.carate@asst-brianza.it',
       'VIMERCATE': 'sia.vimercate@asst-brianza.it',
@@ -226,9 +237,9 @@
             case 0: valA = a.citta.toLowerCase(); valB = b.citta.toLowerCase(); break;
             case 1: valA = a.indirizzo.toLowerCase(); valB = b.indirizzo.toLowerCase(); break;
             case 2: valA = a.servizio.toLowerCase(); valB = b.servizio.toLowerCase(); break;
-            case 3: valA = a.email.toLowerCase(); valB = b.email.toLowerCase(); break;
-            case 4: valA = a.presidio.toLowerCase(); valB = b.presidio.toLowerCase(); break;
-            case 5: valA = a.note.toLowerCase(); valB = b.note.toLowerCase(); break;
+            case 3: valA = (a.email || '').toLowerCase(); valB = (b.email || '').toLowerCase(); break;
+            case 4: valA = (a.presidio || '').toLowerCase(); valB = (b.presidio || '').toLowerCase(); break;
+            case 5: valA = (a.note || '').toLowerCase(); valB = (b.note || '').toLowerCase(); break;
             default: valA = ''; valB = '';
           }
           if(valA < valB) return sortAsc ? -1 : 1;
@@ -240,9 +251,108 @@
       const totalPages = Math.ceil(filtered.length / pageSize);
       if(currentPage > totalPages) currentPage = totalPages || 1;
 
-      const pageRows = filtered.slice((currentPage -1)*pageSize, currentPage*pageSize);
+      const pageRows = filtered.slice((currentPage - 1) * pageSize, currentPage * pageSize);
 
       tbody.innerHTML = '';
+
       for (const row of pageRows) {
-        // Tooltip email da presidio (chiave maiuscola)
-        const tooltipTextEmail = tooltipEmails[row.presidio.toUpperCase()] || ''
+        const presidioKey = row.presidio ? row.presidio.toUpperCase() : '';
+        const tooltipEmail = tooltipEmails[presidioKey] || '';
+
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${row.citta}</td>
+          <td>${row.indirizzo}</td>
+          <td>${row.servizio}</td>
+          <td>
+            <div class="tooltip">${row.email && row.email.trim() !== '' ? row.email : row.presidio}
+              ${tooltipEmail ? `<span class="tooltiptext">${tooltipEmail}</span>` : ''}
+            </div>
+          </td>
+          <td>${row.presidio}</td>
+          <td>${row.note}</td>
+        `;
+        tbody.appendChild(tr);
+      }
+
+      renderPagination(totalPages);
+    }
+
+    function renderPagination(totalPages) {
+      pagination.innerHTML = '';
+
+      if(totalPages <= 1) return;
+
+      for(let i=1; i <= totalPages; i++) {
+        const btn = document.createElement('button');
+        btn.textContent = i;
+        if(i === currentPage) btn.disabled = true;
+        btn.addEventListener('click', () => {
+          currentPage = i;
+          renderTable();
+        });
+        pagination.appendChild(btn);
+      }
+    }
+
+    function resetFilters() {
+      document.getElementById('cityFilter').value = '';
+      document.getElementById('serviceFilter').value = '';
+      document.getElementById('presidioFilter').value = '';
+      currentPage = 1;
+      currentSortIndex = null;
+      sortAsc = true;
+      renderTable();
+    }
+
+    function sortTable(index) {
+      if(currentSortIndex === index) {
+        sortAsc = !sortAsc;
+      } else {
+        currentSortIndex = index;
+        sortAsc = true;
+      }
+      renderTable();
+    }
+
+    function exportPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+
+      const filtered = filterRows();
+      const headers = ["Città", "Indirizzo", "Servizio ASST", "Email", "Presidio Fleet", "Note"];
+      const data = filtered.map(row => {
+        // Usa email tooltip se email vuota
+        const presidioKey = row.presidio ? row.presidio.toUpperCase() : '';
+        const mail = row.email && row.email.trim() !== '' ? row.email : (tooltipEmails[presidioKey] || '');
+        return [row.citta, row.indirizzo, row.servizio, mail, row.presidio, row.note];
+      });
+
+      doc.setFontSize(12);
+      doc.text("Esportazione Sedi Filtrate", 10, 10);
+
+      // autoTable plugin per tabella
+      doc.autoTable({
+        startY: 20,
+        head: [headers],
+        body: data,
+        styles: { fontSize: 8 }
+      });
+
+      doc.save("Sedi_Filtrate.pdf");
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
+    }
+
+    document.getElementById('cityFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
+    document.getElementById('serviceFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
+    document.getElementById('presidioFilter').addEventListener('change', () => { currentPage = 1; renderTable(); });
+
+    loadCSV();
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+</body>
+</html>
